# src/swagger.json
@@ -11,6 +11,9 @@
 			},
 			"CompanyDto": {
 				"properties": {
+					"id": {
+						"type": "string"
+					},
 					"_id": {
 						"$ref": "#/components/schemas/Types.ObjectId"
 					},
@@ -22,16 +25,31 @@
 					},
 					"industry": {
 						"type": "string"
+					},
+					"users": {
+						"items": {
+							"$ref": "#/components/schemas/Types.ObjectId"
+						},
+						"type": "array"
+					},
+					"units": {
+						"items": {
+							"$ref": "#/components/schemas/Types.ObjectId"
+						},
+						"type": "array"
 					}
 				},
 				"required": [
+					"id",
 					"_id",
-					"name"
+					"name",
+					"users",
+					"units"
 				],
 				"type": "object",
 				"additionalProperties": false
 			},
-			"Pick_CompanyDto.Exclude_keyofCompanyDto.users-or-units-or-_id__": {
+			"Pick_CompanyDto.Exclude_keyofCompanyDto.users-or-units-or-_id-or-id__": {
 				"properties": {
 					"name": {
 						"type": "string"
@@ -49,12 +67,12 @@
 				"type": "object",
 				"description": "From T, pick a set of properties whose keys are in the union K"
 			},
-			"Omit_CompanyDto.users-or-units-or-_id_": {
-				"$ref": "#/components/schemas/Pick_CompanyDto.Exclude_keyofCompanyDto.users-or-units-or-_id__",
+			"Omit_CompanyDto.users-or-units-or-_id-or-id_": {
+				"$ref": "#/components/schemas/Pick_CompanyDto.Exclude_keyofCompanyDto.users-or-units-or-_id-or-id__",
 				"description": "Construct a type with the properties of T except for those in type K."
 			},
 			"CreateCompanyDto": {
-				"$ref": "#/components/schemas/Omit_CompanyDto.users-or-units-or-_id_"
+				"$ref": "#/components/schemas/Omit_CompanyDto.users-or-units-or-_id-or-id_"
 			},
 			"RoleType": {
 				"type": "string",
@@ -65,6 +83,12 @@
 			},
 			"UserDto": {
 				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"_id": {
+						"$ref": "#/components/schemas/Types.ObjectId"
+					},
 					"name": {
 						"type": "string"
 					},
@@ -79,6 +103,8 @@
 					}
 				},
 				"required": [
+					"id",
+					"_id",
 					"name",
 					"email",
 					"companyId",
